# Context

./: .gitignore  CMakeLists.txt
.github/workflows/: CI.yml
Context/: CMakeLists.txt  Context.cpp  Context.h  Context.inl  Main.cpp
Demonstration/: CMakeLists.txt  Main.cpp
